--- a/agent_training.ipynb
+++ b/agent_training.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]/home/nchagnet/pyenvs/game-ai-421-dice_py/lib/python3.11/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.run to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.run` for environment variables or `env.get_wrapper_attr('run')` that will search the reminding wrappers.\u001b[0m\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nchagnet/pyenvs/game-ai-421-dice_py/lib/python3.11/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.run to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.run` for environment variables or `env.get_wrapper_attr('run')` that will search the reminding wrappers.\u001b[0m\n",
       "  logger.warn(\n",
-      "20000it [07:12, 46.22it/s] \n"
+      "1428it [00:26, 46.18it/s]"
      ]
     }
    ],
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,9 +282,16 @@
     "plot_check(outputs_checks_2, axs[0, 1], [\"Q-Agent 1\", \"Random\"])\n",
     "plot_check(outputs_checks_3, axs[1, 0], [\"Q-Agent 2\", \"Random\"])\n",
     "plot_check(outputs_checks_4, axs[1, 1], [\"Q-Agent 1\", \"Q-Agent 2\"])\n",
-    "\n",
+    "fig.tight_layout()\n",
     "fig.savefig(\"figs/comparison_agents.png\", dpi=300)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
